--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chenz</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet"  href="css/style.css">
 </head>
 <body>
     <div class="main">
@@ -32,10 +32,10 @@
                     <a href="https://www.baidu.com/index.php?tn=monline_3_dg">联系我们</a>
                 </li>
                </ul>
-         </div>
-        </div>
     </header>
-    </div>
-    
+</div>
+
+</div>
+        
 </body>
 </html>
