--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chenz</title>
     <link rel="stylesheet"  href="css/style.css">
+    <style>
+        body{
+            background: url(file:///F:/dw/%E5%AF%BC%E8%88%AA%E6%A0%8F/images/cc.jpg);
+        }
+    </style>
 </head>
 <body>
     <div class="main">
@@ -36,6 +41,5 @@
 </div>
 
 </div>
-        
 </body>
 </html>
